tests/baselines/reference/tsxElementResolution13.errors.txt
tests/cases/conformance/jsx/file.tsx(3,12): error TS2608: The global type 'JSX.ElementAttributesProperty' may not have more than one property.


==== tests/cases/conformance/jsx/file.tsx (1 errors) ====
    declare module JSX {
    	interface Element { }
    	interface ElementAttributesProperty { pr1: any; pr2: any; }
    	          ~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2608: The global type 'JSX.ElementAttributesProperty' may not have more than one property.
    }
    
    interface Obj1 {
    	new(n: string): any;
    }
    var obj1: Obj1;
    <obj1 x={10} />; // Error
    